--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-sign",
+  "name": "@zdy/react-native-sign",
   "version": "1.0.0",
   "main": "index.js",
   "author": "ZackLeonardo <maiz9088@icloud.com>",
